<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_weather_description">Very Sunny</string>
    <string name="default_weather_temperature">16 C</string>
    <string name="default_weather_location">Islamabad, Pakistan</string>
    <string name="default_weather_date">Friday, Aug 16, 2020</string>
    <string name="default_weather_icon_description">Weather icon displayed here</string>
    <string name="pm_12">12 PM</string>
    <string name="pm3">3 PM</string>
    <string name="pm6">6 PM</string>
    <string name="pm9">9 PM</string>
    <string name="am12">12 AM</string>
    <string name="pm12_temp">18 C</string>
    <string name="pm3_temp">15 C</string>
    <string name="pm6_temp">13 C</string>
    <string name="pm9_temp">11 C</string>
    <string name="am12_temp">08 C</string>
    <string name="every_3hour_weather_description_not_found">Weather information could not be leaded</string>
    <string name="day_name">Fri</string>
    <string name="lowest_hight_temp">14 C / 17 C</string>
    <string name="fetching_information">Fetching information</string>
    <string name="location_search_hint">Enter the city name you wish to search</string>
</resources>