<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/CardViewMainStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/cardview_padding">

            <TextView
                android:id="@+id/today_weather_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_weather_description"
                android:textSize="@dimen/default_textsize_description"
                app:layout_constraintBottom_toTopOf="@+id/today_temperature_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/today_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/today_temperature_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_weather_temperature"
                android:textSize="@dimen/default_textsize_temperature"
                app:layout_constraintBottom_toTopOf="@+id/today_location_text"
                app:layout_constraintEnd_toStartOf="@+id/today_icon"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/today_weather_description_text" />

            <TextView
                android:id="@+id/today_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_weather_location"
                app:layout_constraintBottom_toTopOf="@+id/today_date_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/today_icon"
                app:layout_constraintTop_toBottomOf="@+id/today_temperature_text" />

            <TextView
                android:id="@+id/today_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_weather_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/today_icon"
                app:layout_constraintTop_toBottomOf="@+id/today_location_text" />

            <ImageView
                android:id="@+id/today_icon"
                android:layout_width="@dimen/today_icon_dimen"
                android:layout_height="@dimen/today_icon_dimen"
                android:contentDescription="@string/default_weather_icon_description"
                app:layout_constraintBottom_toBottomOf="@id/today_date_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/today_temperature_text"
                app:layout_constraintTop_toTopOf="@id/today_weather_description_text"

                android:src="@drawable/very_sunny"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>