<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/every_3hour_info_cardView"
            style="@style/CardViewMainStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/cardview_padding">

                <TextView
                    android:id="@+id/pm12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm_12"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/pm12_icon"
                    app:layout_constraintEnd_toStartOf="@+id/pm3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pm3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm3"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/pm3_icon"
                    app:layout_constraintEnd_toStartOf="@+id/pm6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm12"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pm6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm6"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/pm6_icon"
                    app:layout_constraintEnd_toStartOf="@+id/pm9"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pm9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm9"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/pm9_icon"
                    app:layout_constraintEnd_toStartOf="@+id/am12"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm6"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/am12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/am12"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/am12_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm9"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/pm12_icon"
                    android:layout_width="@dimen/every_3hour_icon_dimen"
                    android:layout_height="@dimen/every_3hour_icon_dimen"
                    android:contentDescription="@string/every_3hour_weather_description_not_found"
                    app:layout_constraintBottom_toTopOf="@+id/pm12_temp"
                    app:layout_constraintEnd_toStartOf="@+id/pm3_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pm12"
                    app:srcCompat="@drawable/sun_icon" />

                <ImageView
                    android:id="@+id/pm3_icon"
                    android:layout_width="@dimen/every_3hour_icon_dimen"
                    android:layout_height="@dimen/every_3hour_icon_dimen"
                    android:contentDescription="@string/every_3hour_weather_description_not_found"
                    app:layout_constraintBottom_toTopOf="@+id/pm3_temp"
                    app:layout_constraintEnd_toStartOf="@+id/pm6_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm12_icon"
                    app:layout_constraintTop_toBottomOf="@+id/pm3"
                    app:srcCompat="@drawable/sun_icon" />

                <ImageView
                    android:id="@+id/pm6_icon"
                    android:layout_width="@dimen/every_3hour_icon_dimen"
                    android:layout_height="@dimen/every_3hour_icon_dimen"
                    android:contentDescription="@string/every_3hour_weather_description_not_found"
                    app:layout_constraintBottom_toTopOf="@+id/pm6_temp"
                    app:layout_constraintEnd_toStartOf="@+id/pm9_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm3_icon"
                    app:layout_constraintTop_toBottomOf="@+id/pm6"
                    app:srcCompat="@drawable/sun_icon" />

                <ImageView
                    android:id="@+id/pm9_icon"
                    android:layout_width="@dimen/every_3hour_icon_dimen"
                    android:layout_height="@dimen/every_3hour_icon_dimen"
                    android:contentDescription="@string/every_3hour_weather_description_not_found"
                    app:layout_constraintBottom_toTopOf="@+id/pm9_temp"
                    app:layout_constraintEnd_toStartOf="@+id/am12_icon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm6_icon"
                    app:layout_constraintTop_toBottomOf="@+id/pm9"
                    app:srcCompat="@drawable/sun_icon" />

                <ImageView
                    android:id="@+id/am12_icon"
                    android:layout_width="@dimen/every_3hour_icon_dimen"
                    android:layout_height="@dimen/every_3hour_icon_dimen"
                    android:contentDescription="@string/every_3hour_weather_description_not_found"
                    app:layout_constraintBottom_toTopOf="@+id/am12_temp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm9_icon"
                    app:layout_constraintTop_toBottomOf="@+id/am12"
                    app:srcCompat="@drawable/sun_icon" />


                <TextView
                    android:id="@+id/pm12_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm12_temp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/pm3_temp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pm12_icon" />

                <TextView
                    android:id="@+id/pm3_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm3_temp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/pm6_temp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm12_temp"
                    app:layout_constraintTop_toBottomOf="@+id/pm3_icon" />

                <TextView
                    android:id="@+id/pm6_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm6_temp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/pm9_temp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm3_temp"
                    app:layout_constraintTop_toBottomOf="@+id/pm6_icon" />

                <TextView
                    android:id="@+id/pm9_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm9_temp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/am12_temp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm6_temp"
                    app:layout_constraintTop_toBottomOf="@+id/pm9_icon" />

                <TextView
                    android:id="@+id/am12_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/am12_temp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/pm9_temp"
                    app:layout_constraintTop_toBottomOf="@+id/am12_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>